@@ -40,3 +40,23 @@ build-rust-nightly:
     - docker push $REGISTRY_HOSTNAME/$CONTAINER_IMAGE:nightly
   only:
     - release
+
+build-rust-ci-tools-nightly:
+  stage: build
+  image: grauwoelfchen/rust:nightly
+  variables:
+    CONTAINER_IMAGE: grauwoelfchen/rust-ci-tools
+  services:
+    - docker:dind
+  before_script:
+    - docker version
+    - echo "$REGISTRY_PASSWORD" | docker login -u $REGISTRY_USERNAME
+      --password-stdin $REGISTRY_HOSTNAME
+  script:
+    - cd rust
+    - docker build -t $REGISTRY_HOSTNAME/$CONTAINER_IMAGE:nightly nightly
+    - docker tag $REGISTRY_HOSTNAME/$CONTAINER_IMAGE:nightly
+      $REGISTRY_HOSTNAME/$CONTAINER_IMAGE:nightly
+    - docker push $REGISTRY_HOSTNAME/$CONTAINER_IMAGE:nightly
+  only:
+    - release
