@@ -1,3 +1,6 @@
+Wed 11 Apr 2018 Yasuhiro Asaka <yasuhiro.asaka@grauwoelfchen.net>
+	* Create rust-ci-tools:nightly
+
 Sat 07 Apr 2018 Yasuhiro Asaka <yasuhiro.asaka@grauwoelfchen.net>
 	* Add build jobs on CI (gitlab-ci)
 	* Add LICENSE file
